--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,14 @@
       })(window, document, "clarity", "script", "q42b36k2fb");
   </script>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/download(1).png" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Metaguise specializes in bespoke luxury metal facades, parametric designs, and architectural cladding, redefining modern elevations in India."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/download(1).png" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
