--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:image" content="%PUBLIC_URL%/favicon.png">
     <meta
       name="description"
       content="Metaguise specializes in bespoke luxury metal facades, parametric designs, and architectural cladding, redefining modern elevations in India."
