--- a/public/index.html
+++ b/public/index.html
@@ -5,31 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Metaguise specializes in bespoke luxury metal facades, parametric designs, and architectural cladding, redefining modern elevations in India." />
-    
+
     <!-- Open Graph Meta -->
-    <meta property="og:image" content="%PUBLIC_URL%/favicon.png" />
+    <meta property="og:image" content="https://metaguise.com/favicon.png" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="icon" type="image/png" href="https://metaguise.com/favicon.png" />
 
     <!-- Preload Critical Resources -->
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/react@17/umd/react.production.min.js" as="script">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/react-dom@17/umd/react-dom.production.min.js" as="script">
-
+    
     <!-- Manifest -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="https://metaguise.com/manifest.json" />
 
     <title>Metaguise | India’s Leading Experts in Luxury Metal Facades</title>
 
     <!-- Optimize Google Tag Manager -->
-    <script>
-      window.requestIdleCallback(function() {
-        var script = document.createElement('script');
-        script.src = "https://www.googletagmanager.com/gtag/js?id=G-2EMNJ0PYTH";
-        script.async = true;
-        document.head.appendChild(script);
-      });
-    </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2EMNJ0PYTH"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -38,20 +31,14 @@
     </script>
 
     <!-- Lazy Load Microsoft Clarity -->
-    <script defer>
-      (function(c, l, a, r, i, t, y) {
-          c[a] = c[a] || function() { (c[a].q = c[a].q || []).push(arguments) };
-          t = l.createElement(r); t.defer = 1; t.src = "https://www.clarity.ms/tag/" + i;
-          y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y);
-      })(window, document, "clarity", "script", "qepraxoxrh");
-    </script>
+    <script async src="https://www.clarity.ms/tag/qepraxoxrh"></script>
 
     <!-- Load React & ReactDOM -->
     <script defer src="https://cdn.jsdelivr.net/npm/react@17/umd/react.production.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/react-dom@17/umd/react-dom.production.min.js"></script>
 
     <!-- Load Main JS File -->
-    <script defer src="%PUBLIC_URL%/js/main.8fc30c28.js"></script>
+    <script defer src="https://metaguise.com/js/main.ace78525.js"></script>
   </head>
 
   <body>
@@ -67,7 +54,7 @@
     <div id="root"></div>
 
     <!-- Optimized YouTube Embed -->
-    <lite-youtube videoid="mwmFELxs14E"></lite-youtube>
+    <!-- <lite-youtube videoid="mwmFELxs14E"></lite-youtube> -->
     <script type="module">
       import 'https://cdn.jsdelivr.net/npm/lite-youtube-embed@0.3.1/src/lite-yt-embed.js';
     </script>
