--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
       gtag('config', 'G-2EMNJ0PYTH', { 'anonymize_ip': true, 'send_page_view': false });
     </script>
 
+<script src="https://cdn.jsdelivr.net/npm/source-map@0.7.3/dist/source-map.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/terser/dist/bundle.min.js"></script>
+
     <!-- Lazy Load Microsoft Clarity -->
     <script async src="https://www.clarity.ms/tag/qepraxoxrh"></script>
 
