--- a/public/index.html
+++ b/public/index.html
@@ -30,18 +30,17 @@
       gtag('config', 'G-2EMNJ0PYTH', { 'anonymize_ip': true, 'send_page_view': false });
     </script>
 
-<script src="https://cdn.jsdelivr.net/npm/source-map@0.7.3/dist/source-map.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/terser/dist/bundle.min.js"></script>
-
     <!-- Lazy Load Microsoft Clarity -->
     <script async src="https://www.clarity.ms/tag/qepraxoxrh"></script>
 
-    <!-- Load React & ReactDOM -->
+    <!-- Load React & ReactDOM (Defer) -->
     <script defer src="https://cdn.jsdelivr.net/npm/react@17/umd/react.production.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/react-dom@17/umd/react-dom.production.min.js"></script>
 
-    <!-- Load Main JS File -->
-    <script defer src="https://metaguise.com/js/main.ace78525.js"></script>
+    <!-- Optimize YouTube Embed -->
+    <script type="module">
+      import 'https://cdn.jsdelivr.net/npm/lite-youtube-embed@0.3.1/src/lite-yt-embed.js';
+    </script>
   </head>
 
   <body>
@@ -56,10 +55,11 @@
 
     <div id="root"></div>
 
-    <!-- Optimized YouTube Embed -->
-    <!-- <lite-youtube videoid="mwmFELxs14E"></lite-youtube> -->
-    <script type="module">
-      import 'https://cdn.jsdelivr.net/npm/lite-youtube-embed@0.3.1/src/lite-yt-embed.js';
-    </script>
+    <!-- Defer Main JS File (Avoid Render Blocking) -->
+    <script defer src="https://metaguise.com/js/main.ace78525.js"></script>
+
+    <!-- Defer Non-Critical Scripts -->
+    <script defer src="https://cdn.jsdelivr.net/npm/source-map@0.7.3/dist/source-map.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/terser/dist/bundle.min.js"></script>
   </body>
 </html>
