--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="preload" as="image" href="https://res.cloudinary.com/dptxcqnnw/image/upload/f_auto,q_auto,w_1200/z1tjh4xby2gkx28yfkng.webp">
+
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
