--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <title>Metaguise | India’s Leading Experts in Luxury Metal Facades</title>
 
     <!-- Optimize Google Tag Manager -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2EMNJ0PYTH"></script>
+    <script defer src="https://www.googletagmanager.com/gtag/js?id=G-2EMNJ0PYTH"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -60,8 +60,6 @@
     <!-- Defer Main JS File (Avoid Render Blocking) -->
     <script defer src="https://metaguise.com/js/main.ace78525.js"></script>
 
-    <!-- Defer Non-Critical Scripts -->
-    <script defer src="https://cdn.jsdelivr.net/npm/source-map@0.7.3/dist/source-map.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/terser/dist/bundle.min.js"></script>
+
   </body>
 </html>
