--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
     <meta name="description" content="Metaguise specializes in bespoke luxury metal facades, parametric designs, and architectural cladding, redefining modern elevations in India." />
 
     <!-- Open Graph Meta -->
-    <meta property="og:image" content="https://metaguise.com/favicon.png" />
+    <meta property="og:image" content="https://metaguise.com/favicon.ico" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="https://metaguise.com/favicon.png" />
+    <link rel="icon" type="image/png" href="https://metaguise.com/favicon.ico" />
 
     <!-- Preload Critical Resources -->
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/react@17/umd/react.production.min.js" as="script">
