--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
 
     <!-- Open Graph Meta -->
     <meta property="og:image" content="https://metaguise.com/favicon.ico" />
-
+   
+      <link rel="canonical" href="https://metaguise.com/" />
+    
+    
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="https://metaguise.com/favicon.ico" />
 
