--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Metaguise specializes in bespoke luxury metal facades, parametric designs, and architectural cladding, redefining modern elevations in India." />
 
+    <meta name="p:domain_verify" content="f3176ca2d1793f6481f27a2f5fd7ddb1"/>
     <!-- Open Graph Meta -->
     <meta property="og:image" content="https://metaguise.com/favicon.ico" />
    
