--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Metaguise specializes in bespoke luxury metal facades, parametric designs, and architectural cladding, redefining modern elevations in India." />
 
-    <meta name="p:domain_verify" content="f3176ca2d1793f6481f27a2f5fd7ddb1"/>
     <!-- Open Graph Meta -->
     <meta property="og:image" content="https://metaguise.com/favicon.ico" />
    
@@ -26,18 +25,19 @@
     <!-- Manifest -->
     <link rel="manifest" href="https://metaguise.com/manifest.json" />
 
-    <title>Metaguise | Leading experts in Metal Facades & Parametric Architecture</title>
-   
+    <title>Metaguise | India’s Leading Experts in Luxury Metal Facades</title>
+    
 
-    <!-- Optimize Google Tag Manager -->
-    <script defer src="https://www.googletagmanager.com/gtag/js?id=G-2EMNJ0PYTH"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-2EMNJ0PYTH', { 'anonymize_ip': true, 'send_page_view': false });
-    </script>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16992180594"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16992180594');
+</script>
     <!-- Lazy Load Microsoft Clarity -->
     <script async type="text/javascript">
       (function(c,l,a,r,i,t,y){
