--- a/public/index.html
+++ b/public/index.html
@@ -29,15 +29,14 @@
     
 
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16992180594"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'AW-16992180594');
-</script>
+   <!-- Optimize Google Tag Manager -->
+    <script defer src="https://www.googletagmanager.com/gtag/js?id=G-2EMNJ0PYTH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-2EMNJ0PYTH', { 'anonymize_ip': true, 'send_page_view': false });
+    </script>
     <!-- Lazy Load Microsoft Clarity -->
     <script async type="text/javascript">
       (function(c,l,a,r,i,t,y){
