--- a/public/index.html
+++ b/public/index.html
@@ -30,12 +30,12 @@
 
 
    <!-- Optimize Google Tag Manager -->
-    <script defer src="https://www.googletagmanager.com/gtag/js?id=G-2EMNJ0PYTH"></script>
+    <script defer src="https://www.googletagmanager.com/gtag/js?id=AW-16992180594"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-2EMNJ0PYTH', { 'anonymize_ip': true, 'send_page_view': false });
+      gtag('config', 'AW-16992180594', { 'anonymize_ip': true, 'send_page_view': false });
     </script>
     <!-- Lazy Load Microsoft Clarity -->
     <script async type="text/javascript">
@@ -56,7 +56,7 @@
   <body>
     <!-- Google Tag Manager (noscript) -->
     <noscript>
-      <iframe src="https://www.googletagmanager.com/ns.html?id=G-2EMNJ0PYTH"
+      <iframe src="https://www.googletagmanager.com/ns.html?id=AW-16992180594"
         height="0" width="0" style="display:none;visibility:hidden">
       </iframe>
     </noscript>
