--- a/public/index.html
+++ b/public/index.html
@@ -34,13 +34,22 @@
       </iframe>
     </noscript>
 
-   <!-- Optimize Google Tag Manager -->
+   <!-- Optimize Google Tag ADS Manager -->
     <script defer src="https://www.googletagmanager.com/gtag/js?id=AW-16992180594"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'AW-16992180594', { 'anonymize_ip': true, 'send_page_view': false });
+    </script>
+
+        <!-- Optimize Google Tag Manager -->
+    <script defer src="https://www.googletagmanager.com/gtag/js?id=G-2EMNJ0PYTH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-2EMNJ0PYTH', { 'anonymize_ip': true, 'send_page_view': false });
     </script>
     <!-- Lazy Load Microsoft Clarity -->
     <script async type="text/javascript">
@@ -50,6 +59,13 @@
           y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
       })(window, document, "clarity", "script", "qepraxoxrh");
   </script>
+
+      <!-- Google Tag Manager (noscript) -->
+    <noscript>
+      <iframe src="https://www.googletagmanager.com/ns.html?id=G-2EMNJ0PYTH"
+        height="0" width="0" style="display:none;visibility:hidden">
+      </iframe>
+    </noscript>
 
 
     <!-- Optimize YouTube Embed -->
