--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <!-- Open Graph Meta -->
     <meta property="og:image" content="https://metaguise.com/favicon.ico" />
    
-    <link rel="canonical" href="https://metaguise.com/" />
+<!--     <link rel="canonical" href="https://metaguise.com/" /> -->
     
     
     <!-- Favicon -->
