--- a/public/index.html
+++ b/public/index.html
@@ -76,6 +76,17 @@ src="https://www.facebook.com/tr?id=1922267571644016&ev=PageView&noscript=1"
       })(window, document, "clarity", "script", "qepraxoxrh");
   </script>
 
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16992180594">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16992180594');
+</script>
+
       <!-- Google Tag Manager (noscript) -->
     <noscript>
       <iframe src="https://www.googletagmanager.com/ns.html?id=G-2EMNJ0PYTH"
