--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
 
   <head>
     <link rel="preload" as="image" href="https://res.cloudinary.com/dptxcqnnw/image/upload/f_auto,q_auto,w_1200/z1tjh4xby2gkx28yfkng.webp">
+    <link 
+  rel="stylesheet" 
+  href="https://cdn.jsdelivr.net/npm/lite-youtube-embed@0.3.1/src/lite-yt-embed.css" 
+/>
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
