--- a/public/index.html
+++ b/public/index.html
@@ -1,146 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <!-- Preload hero image -->
-  <link rel="preload" as="image" href="https://res.cloudinary.com/dptxcqnnw/image/upload/f_auto,q_auto,w_1200/z1tjh4xby2gkx28yfkng.webp">
-
-  <!-- Lite YouTube CSS -->
+  <link rel="preload" as="image"
+    href="https://res.cloudinary.com/dptxcqnnw/image/upload/f_auto,q_auto,w_1200/z1tjh4xby2gkx28yfkng.webp">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lite-youtube-embed@0.3.1/src/lite-yt-embed.css" />
-
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Metaguise specializes in bespoke luxury metal facades, parametric designs, and architectural cladding, redefining modern elevations in India." />
-
-  <title>Metaguise | India’s Leading Experts in Luxury Metal Facades</title>
-
-  <!-- ========== Google Tag Manager ========== -->
-  <script>
-    (function(w,d,s,l,i){
-      w[l]=w[l]||[];
-      w[l].push({'gtm.start': new Date().getTime(), event:'gtm.js'});
-      var f=d.getElementsByTagName(s)[0],
-          j=d.createElement(s),
-          dl=l!='dataLayer'?'&l='+l:'';
-      j.async=true;
-      j.src= 'https://www.googletagmanager.com/gtm.js?id='+i+dl;
-      f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-5DNFJRWL');
-  </script>
-
-  <!-- GTM NoScript -->
-  <noscript>
-    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5DNFJRWL"
-            height="0" width="0" style="display:none;visibility:hidden"></iframe>
-  </noscript>
-  <!-- ======================================= -->
-
+  <meta name="description"
+    content="Metaguise specializes in bespoke luxury metal facades, parametric designs, and architectural cladding, redefining modern elevations in India." />
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' }); var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f); })(window, document, 'script', 'dataLayer', 'GTM-5DNFJRWL');</script>
+  <!-- End Google Tag Manager --> <!-- Google Tag Manager (noscript) --> <noscript><iframe
+      src="https://www.googletagmanager.com/ns.html?id=GTM-5DNFJRWL" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript> <!-- End Google Tag Manager (noscript) -->
   <!-- Open Graph Meta -->
   <meta property="og:image" content="https://metaguise.com/favicon.ico" />
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="https://metaguise.com/favicon.ico" />
-
-  <!-- Preload React -->
+  <!-- <link rel="canonical" href="https://metaguise.com/" /> --> <!-- Favicon -->
+  <link rel="icon" type="image/png" href="https://metaguise.com/favicon.ico" /> <!-- Preload Critical Resources -->
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/react@17/umd/react.production.min.js" as="script">
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/react-dom@17/umd/react-dom.production.min.js" as="script">
-
   <!-- Manifest -->
   <link rel="manifest" href="https://metaguise.com/manifest.json" />
-
-  <!-- ========== Google Ads Tag ========== -->
-  <noscript>
-    <iframe src="https://www.googletagmanager.com/ns.html?id=AW-16992180594"
-            height="0" width="0" style="display:none;visibility:hidden"></iframe>
-  </noscript>
-
+  <title>Metaguise | India’s Leading Experts in Luxury Metal Facades</title> <!-- Google Tag Manager (noscript) -->
+  <noscript> <iframe src="https://www.googletagmanager.com/ns.html?id=AW-16992180594" height="0" width="0"
+      style="display:none;visibility:hidden"> </iframe> </noscript> <!-- Optimize Google Tag ADS Manager -->
   <script defer src="https://www.googletagmanager.com/gtag/js?id=AW-16992180594"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'AW-16992180594', { anonymize_ip: true, send_page_view: false });
-  </script>
-  <!-- ==================================== -->
-
-  <!-- ========== Facebook Pixel ========== -->
-  <script>
-    !function(f,b,e,v,n,t,s){
-      if(f.fbq) return;
-      n=f.fbq=function(){n.callMethod?
-        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-      if(!f._fbq) f._fbq=n;
-      n.push=n; n.loaded=!0; n.version='2.0';
-      n.queue=[];
-      t=b.createElement(e); t.async=!0;
-      t.src=v; s=b.getElementsByTagName(e)[0];
-      s.parentNode.insertBefore(t,s)
-    }(window, document,'script', 'https://connect.facebook.net/en_US/fbevents.js');
-
-    fbq('init', '1922267571644016');
-    fbq('track', 'PageView');
-  </script>
-
-  <noscript>
-    <img height="1" width="1" style="display:none"
-         src="https://www.facebook.com/tr?id=1922267571644016&ev=PageView&noscript=1" />
-  </noscript>
-  <!-- ==================================== -->
-
-  <!-- ========== Google Analytics (GA4) ========== -->
+  <script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'AW-16992180594', { 'anonymize_ip': true, 'send_page_view': false }); </script>
+  <script> !function (f, b, e, v, n, t, s) { if (f.fbq) return; n = f.fbq = function () { n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments) }; if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0'; n.queue = []; t = b.createElement(e); t.async = !0; t.src = v; s = b.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t, s) }(window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js'); fbq('init', '1922267571644016'); fbq('track', 'PageView'); </script>
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=1922267571644016&ev=PageView&noscript=1" /></noscript>
+  <!-- Optimize Google Tag Manager -->
   <script defer src="https://www.googletagmanager.com/gtag/js?id=G-2EMNJ0PYTH"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-2EMNJ0PYTH', { anonymize_ip: true, send_page_view: false });
-  </script>
-  <!-- ============================================ -->
-
-  <!-- ========== Microsoft Clarity ========== -->
-  <script async type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-      c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-      t=l.createElement(r); t.async=1;
-      t.src="https://www.clarity.ms/tag/"+i;
-      y=l.getElementsByTagName(r)[0];
-      y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "qepraxoxrh");
-  </script>
-  <!-- ======================================= -->
-
-  <!-- ========== Duplicate Google Ads Tag? ========== -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16992180594"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'AW-16992180594');
-  </script>
-  <!-- ============================================= -->
-
-  <!-- ========== GTM NoScript (GA4) ========== -->
-  <noscript>
-    <iframe src="https://www.googletagmanager.com/ns.html?id=G-2EMNJ0PYTH"
-            height="0" width="0" style="display:none;visibility:hidden"></iframe>
-  </noscript>
-  <!-- ======================================== -->
-
-  <!-- ========== Optimize YouTube Embed ========== -->
-  <script type="module">
-    import 'https://cdn.jsdelivr.net/npm/lite-youtube-embed@0.3.1/src/lite-yt-embed.js';
-  </script>
-  <!-- ============================================ -->
+  <script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'G-2EMNJ0PYTH', { 'anonymize_ip': true, 'send_page_view': false }); </script>
+  <!-- Lazy Load Microsoft Clarity -->
+  <script async
+    type="text/javascript"> (function (c, l, a, r, i, t, y) { c[a] = c[a] || function () { (c[a].q = c[a].q || []).push(arguments) }; t = l.createElement(r); t.async = 1; t.src = "https://www.clarity.ms/tag/" + i; y = l.getElementsByTagName(r)[0]; y.parentNode.insertBefore(t, y); })(window, document, "clarity", "script", "qepraxoxrh"); </script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16992180594"> </script>
+  <script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'AW-16992180594'); </script>
+  <!-- Google Tag Manager (noscript) --> <noscript> <iframe
+      src="https://www.googletagmanager.com/ns.html?id=G-2EMNJ0PYTH" height="0" width="0"
+      style="display:none;visibility:hidden"> </iframe> </noscript> <!-- Optimize YouTube Embed -->
+  <script type="module"> import 'https://cdn.jsdelivr.net/npm/lite-youtube-embed@0.3.1/src/lite-yt-embed.js'; </script>
 </head>
 
-<body>
-  <noscript>
-    Metaguise specializes in bespoke luxury metal facades, parametric designs, and architectural cladding, redefining modern elevations in India.
-  </noscript>
-
-  <div id="root"></div>
-
-  <!-- Main JS (deferred to avoid blocking) -->
+<body> <noscript>Metaguise specializes in bespoke luxury metal facades, parametric designs, and architectural cladding,
+    redefining modern elevations in India.</noscript>
+  <div id="root"></div> <!-- Defer Main JS File (Avoid Render Blocking) -->
   <script defer src="https://metaguise.com/js/main.ace78525.js"></script>
 </body>
+
 </html>
