--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
     });
   </script>
   <!-- ======================================= -->
-
+<meta name="facebook-domain-verification" content="ak53ynw95bpmxcttrs96wll4l4remd" />
   <!-- ========== Duplicate Google Ads Tag (kept but deferred) ========== -->
   <script defer src="https://www.googletagmanager.com/gtag/js?id=AW-16992180594"></script>
   <script defer>
