Update title in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <meta name="theme-color" content="#000000" />
 <meta name="description" content="Metaguise specializes in bespoke luxury metal facades, parametric designs, and architectural cladding, redefining modern elevations in India." />
 
-
+<title>Metaguise | India’s Leading Experts in Luxury Metal Facades</title>
   <!-- ========== Google Tag Manager ========== -->
   <script defer>
     (function(w,d,s,l,i){
