Added new changes

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,46 @@
   <!-- Open Graph Meta -->
   <meta property="og:image" content="https://metaguise.com/favicon.ico" />
 
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Metaguise",
+  "legalName": "Metaguise",
+  "url": "https://metaguise.com/",
+  "description": "Metaguise is a leading metal façade specialist offering advanced parametric cladding systems and turnkey architectural metal solutions across sectors in India.",
+  "logo": "https://res.cloudinary.com/dptxcqnnw/image/upload/v1768208408/download_qarmcu.png",
+  "foundingDate": "2019",
+  "contactPoint": [
+    {
+      "@type": "ContactPoint",
+      "contactType": "customer service",
+      "telephone": "+91-9811604449",
+      "email": "contactus@metaguise.com",
+      "areaServed": "IN",
+      "availableLanguage": ["English", "Hindi"]
+    }
+  ],
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Metaland - Basement F17, 4, Near Golf Course Road, DLF Phase 1, Sector 42",
+    "addressLocality": "Gurugram",
+    "addressRegion": "Haryana",
+    "postalCode": "122009",
+    "addressCountry": "IN"
+  },
+  "sameAs": [
+    "https://www.instagram.com/metaguise/",
+    "https://www.youtube.com/@metaguise",
+    "https://www.facebook.com/metaguise",
+    "https://www.linkedin.com/company/metaguise",
+    "https://archello.com/brand/metaguise",
+    "https://www.architecturaldigest.in/adpro/directory/profile/metaguise/"
+  ]
+}
+</script>
+
+
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="https://metaguise.com/favicon.ico" />
 
