Added new changes

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-<meta name="description" content="Metaguise specializes in bespoke luxury metal facades, parametric designs, and architectural cladding, redefining modern elevations in India." />
+<!-- <meta name="description" content="Metaguise specializes in bespoke luxury metal facades, parametric designs, and architectural cladding, redefining modern elevations in India." /> -->
 
 <title>Metaguise | India’s Leading Experts in Luxury Metal Facades</title>
   <!-- ========== Google Tag Manager ========== -->
