Added new changes

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
   "legalName": "Metaguise",
   "url": "https://metaguise.com/",
   "description": "Metaguise is a leading metal façade specialist offering advanced parametric cladding systems and turnkey architectural metal solutions across sectors in India.",
-  "logo": "https://res.cloudinary.com/dptxcqnnw/image/upload/v1768208408/download_qarmcu.png",
+  "logo": "../assets/logo.png",
   "foundingDate": "2019",
   "contactPoint": [
     {
